# vuln-patch-optimizer

vuln-patch-optimizer/: .gitignore  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements.txt
vuln-patch-optimizer/.github/workflows/: ci.yml
vuln-patch-optimizer/data/: sample_assets.json  sample_targets_linux.json  sample_targets_windows.json
vuln-patch-optimizer/scripts/: detect_vulns.py  patch_linux.py  patch_windows.ps1
vuln-patch-optimizer/src/vpo/: __init__.py  cli.py  config.py  metrics.py  simulate.py
vuln-patch-optimizer/src/vpo/patch/: strategies.py
vuln-patch-optimizer/src/vpo/scanners/: base.py  nessus.py  qualys.py  tenable.py
vuln-patch-optimizer/tests/: test_metrics.py  test_strategies.py
